# lifelines

./: .cvsignore  .gitignore  .linesrc  ANNOUNCEMENT  AUTHORS  COPYING  ChangeLog  ChangeLog.usermap  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NewFeatures.3.0.6  README  README.DEVELOPERS  README.INTERNATIONAL  README.LAYOUT  README.MAINTAINERS  README.MAINTAINERS.win32  acconfig.h  acinclude.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  distribute  environment  index.html  install.html  lifelines.spec  lines.cfg  lines.cfg.input  testing.txt
docs/: Install.LifeLines.Windows.txt  Makefile.am  Makefile.in  Run.LifeLines.Windows.txt  btedit.1  dbverify.1  faq.html  install.html  lifelines.sgml  lifelines.vim  ll-devguide.html  ll-devguide.xml  ll-index.sv.html  ll-reportmanual.html  ll-reportmanual.sv.html  ll-reportmanual.sv.xml  ll-reportmanual.txt  ll-reportmanual.xml  ll-userguide.html  ll-userguide.sv.html  ll-userguide.sv.xml  ll-userguide.txt  ll-userguide.xml  llexec.1  llines.1  manual  quickref.ps  todo_Perry.txt
docs/dev/: ChangeLog  README.DEVELOPERS  README.INTERNATIONAL  README.LAYOUT  README.MAINTAINERS  README.MAINTAINERS.rpm
docs/editor/: Makefile.am  lifelines.vim
docs/man/: Makefile.am  btedit.1  dbverify.1  lldump.1  llexec.1  llines.1
docs/manual/: .gitignore  Makefile.am  index.html  index.sv.html  listops.odg  ll-devguide.xml  ll-html.xsl  ll-index.html  ll-reportmanual.sv.xml  ll-reportmanual.xml  ll-userguide.sv.xml  ll-userguide.xml  ll_html.dsl
docs/manual-3.0.62/: index.html  ll-userguide.html
docs/manual-3.1.1/: ll-reportmanual.html  ll-userguide.html
docs/sv/: ll-reportmanual.sv.xml
reports/: .cvsignore  .gitignore  2ppage.ll  4gen1.ll  6gen1.ll  8gen1.ll  BW_descendants.ll  CREDIT  Makefile.am  README  af-import.ll  ahnenliste.ll  ahnentafel.ll  alive.ll  alllines.ll  alllines.sgml.ll  anc2_ged.ll  ancestors2.ll  anniver.ll  bday_cover.ll  bias.ll  bkdes16-1.ll  book-latex.ll  browser.ll  cgi_html.li  cid.ll  common.ll  connect2.ll  cons.ll  count_anc.ll  count_desc.ll  count_paternal_desc.ll  cousins.ll  coverage.ll  cron.ll  d-rtf.ll  dates.ll  desc-henry.ll  desc_ged.ll  dump-ances.ll  (+107 more)
reports/desc-tex2/: Makefile.am  README
reports/novel/: Makefile.am  novel.head  novel.intro  novel.ll
reports/pedtex/: Makefile.am
reports/ps-circ/: ps-circ.ll  ps-circ.ps
reports/ps-fan/: Makefile.am
reports/st/: .gitignore  Makefile.am  st_all.ll  st_all.out  st_all.ref  st_all_stdout.ref  st_aux.li  st_aux.ll  st_collate.li  st_collate.ll  st_collate_8859-1.li  st_collate_8859-1.ll  st_collate_UTF-8.li  st_convert.li  st_convert.ll  st_date.li  st_date.ll  st_db.li  st_db.ll  st_list.li  st_list.ll  st_name.ll  st_number.ll  st_string.li  st_string.ll  st_string_UTF-8.li  st_string_UTF-8.ll  test_fam_it.ll  test_forfam.ll  test_forfam.out  test_forindi.ll  test_forindi.out  test_indi_it.ll  test_indi_it.out  test_othr_it.ll  trigtest.ll
src/arch/: Makefile.am  README  _llnull.c  alphasort.c  bind_textdomain_codeset.c  getopt.c  has_key.c  langinfo.c  ngettext.c  nl_langinfo.c  platform.c  scandir.c  sleep.c  snprintf.c  vsnprintf.c  wcslen.c
src/btree/: Makefile.am  Makefile.in  addkey.c  addkey.h  block.c  block.h  btrec.c  btreei.h  file.c  index.c  index.h  makefile  opnbtree.c  opnbtree.h  record.c  traverse.c  utils.c  utils.h
src/gedlib/: Makefile.am  Makefile.in  brwslist.c  charmaps.c  charprops.c  choose.c  codesets.c  date.c  datei.c  datei.h  dateparse.c  dateprint.c  dbcontext.c  dbfuncs.c  dblist.c  dispfmt.c  editmap.c  editvtab.c  equaliso.c  gedcom.c  gedcomi.h  gengedc.c  gstrings.c  indiseq.c  init.c  intrface.c  keytonod.c  leaks.c  leaksi.h  lldatabase.c  llgettext.c  lloptions.c  locales.c  makefile  messages.c  misc.c  names.c  node.c  nodechk.c  nodeio.c  (+14 more)
src/hdrs/: Makefile.am  Makefile.in  arch.h  array.h  bfs.h  btree.h  cache.h  charprops.h  codesets.h  cscurses.h  date.h  dbcontext.h  dbfuncs.h  dbfuncsi.h  feedback.h  fpattern.h  gedcheck.h  gedcom.h  gedcom_macros.h  generic.h  gengedc.h  hashtab.h  icvt.h  impfeed.h  indiseq.h  interp.h  interpi.h  isolangs.h  langinfz.h  liflines.h  list.h  llnls.h  lloptions.h  llstdlib.h  log.h  menuitem.h  metadata.h  msvc.h  mychar.h  mycurses.h  (+19 more)
src/interp/: .cvsignore  .gitignore  Makefile.am  Makefile.in  alloc.c  builtin.c  builtin_list.c  date.c  eval.c  functab.c  heapused.c  interp.c  interpi.h  intrpseq.c  lex.c  makefile  more.c  parse.c  parse.h  progerr.c  pvalalloc.c  pvalmath.c  pvalue.c  rassa.c  rptsort.c  rptui.c  rptui.h  symtab.c  write.c  yacc.c  yacc.h  yacc.y
src/liflines/: .cvsignore  .gitignore  Makefile.am  Makefile.in  add.c  advedit.c  ask.c  askgedc.c  askprogram.c  browse.c  brwsmenu.c  cscurses.c  delete.c  dynmenu.c  edit.c  error.c  export.c  import.c  interact.c  lbrowse.c  lines_usage.c  listui.c  listui.h  llexec.c  llexec.h  llinesi.h  lloptions.c  loadsave.c  main.c  makefile  menuitem.c  menuset.c  merge.c  miscutls.c  newrecs.c  pedigree.c  remove.c  scan.c  screen.c  screeni.h  (+6 more)
src/stdlib/: Makefile.am  Makefile.in  appendstr.c  array.c  assert.c  backtrace.c  bfs.c  dirs.c  double.c  environ.c  errlog.c  fileops.c  fpattern.c  generic.c  hashtab.c  icvt.c  list.c  listener.c  llabort.c  lldate.c  llnls.c  lloptions.c  (+32 more)
tests/: CreatingTests  Makefile.am  Note  README  do_code_tests.sh  do_rpt_tests.sh  dotests.sh  run_a_test  run_rpt_test.sh  runtest.sh  runtest1.sh  test1.ged  test1.out
tt/: ANSEL_UTF-8.tt  CP1250_UTF-8.tt  CP1251_UTF-8.tt  CP1252_UTF-8.tt  CP437_UTF-8.tt  CP850_UTF-8.tt  CP852_UTF-8.tt  ISO-8859-15_UTF-8.tt  ISO-8859-1_UTF-8.tt  ISO-8859-2_UTF-8.tt  ISO-8859-3_UTF-8.tt  ISO-8859-4_UTF-8.tt  ISO-8859-8_UTF-8.tt  Makefile.am  README  UTF-8_ANSEL.tt  UTF-8_CP1250.tt  UTF-8_CP1251.tt  UTF-8_CP1252.tt  UTF-8_CP437.tt  UTF-8_CP850.tt  UTF-8_CP852.tt  UTF-8_ISO-8859-1.tt  UTF-8_ISO-8859-15.tt  UTF-8_ISO-8859-2.tt  UTF-8_ISO-8859-3.tt  UTF-8_ISO-8859-4.tt  UTF-8_ISO-8859-8.tt  UTF-8__TrCyrillicAscii.tt  UTF-8__asciitex.tt  UTF-8__html.tt  UTF-8__unhtml.tt  UnicodeDataExcerpt.txt
(+213 files in other folders)
