dnl
dnl Configure script for lifelines software
dnl
dnl Process this file with autoconf to produce a configure script.

AC_INIT(liflines/lbrowse.c)
AC_PREREQ(2.13)
AC_REVISION([for lifelines, built with autoconf] AC_ACVERSION)

AM_INIT_AUTOMAKE(lifelines, 3.0.5)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT($HOME)

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl AC_CONFIG_SUBDIRS(btree gedlib interp stdlib)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_INSTALL

echo Looking for libraries
echo Looking for ncurses
AC_CHECK_LIB(ncurses, tparm)
if test "$ac_cv_lib_ncurses_tparm" = "yes"; then
  echo Using ncurses
else
  AC_CHECK_LIB(curses, main)
  if test "$ac_cv_lib_curses_main" = "yes"; then
    echo Using curses
  else
    echo "Didn't find an up-to-date ncurses or curses library!"
    echo "Link problems may result!"
  fi
fi

dnl AC_CHECK_LIB(gdbm, gdbm_open)
dnl AC_CHECK_LIB(nsl, inet_ntoa)
dnl AC_CHECK_LIB(socket, getpeername)
dnl AC_CHECK_LIB(resolv, gethostname)
dnl AC_CHECK_LIB(iberty, bzero)
dnl AC_CHECK_LIB(gen, syslog)
dnl AC_CHECK_LIB(bsd, revoke)
dnl AC_CHECK_LIB(ucb, bzero)

echo Looking for header files
AC_CHECK_HEADERS( getopt.h )
dnl AC_HEADER_STDC
dnl AC_CHECK_HEADERS( errno.h dirent.h fcntl.h getopt.h libgen.h pwd.h siginfo.h signal.h statbuf.h stdio.h stdlib.h string.h strings.h sys/stat.h sys/time.h sys/types.h unistd.h )

dnl echo Looking for typedefs, structures, and compiler characteristics.
dnl AC_C_CONST
dnl AC_HEADER_TIME

echo Looking for library functions
AC_CHECK_FUNCS( getopt )
dnl AC_CHECK_FUNCS(strerror perror strsignal psignal getopt getopt_long random)
dnl investigate using AC_MSG_ERROR for error reporting
dnl echo Looking for OPTIONAL library functions
dnl AC_REPLACE_FUNCS(dirname)

dnl echo Examining library functions
dnl AC_TYPE_SIGNAL

dnl we only use this if we don't have strsignal
dnl AC_DECL_SYS_SIGLIST

AC_OUTPUT(Makefile btree/Makefile interp/Makefile gedlib/Makefile stdlib/Makefile docs/Makefile tools/Makefile liflines/Makefile hdrs/Makefile reports/Makefile)

