dnl
dnl Configure script for lifelines software
dnl
dnl Process this file with autoconf to produce a configure script.


AC_INIT(liflines/lbrowse.c)
AC_PREREQ(2.50)
AC_REVISION([for lifelines, built with autoconf] AC_ACVERSION)
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE(lifelines, 3.0.16p1)
AM_CONFIG_HEADER(config.h)

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl AC_CONFIG_SUBDIRS(btree gedlib interp stdlib)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_YACC
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl codeset conversion library
dnl Do we need AM_ICONV ? (Perry, 2002.06.14)

dnl Internationalization (gettext)
AM_GNU_GETTEXT

dnl Add warning flags when using The GNU C Compiler
if test "${ac_cv_prog_gcc}" = "yes"; then
  # -ansi breaks compile of liflines/askprogram.c [pere 2000-12-31]
  for flag in \
	-W \
	-Wall \
	-Wcast-align \
	-Wmissing-declarations \
	-Wmissing-prototypes \
	-Wreturn-type \
	-Wstrict-prototypes \
	-pedantic
  do
    JAPHAR_GREP_CFLAGS($flag,    [ CFLAGS="$CFLAGS $flag"    ])
  done

  dnl Add debugging as well
  CFLAGS="${CFLAGS} -g"
fi

# Check for Cygwin Environment
case $host_os in
  *cygwin*) CFLAGS="${CFLAGS} -DBROKEN_LINKER"
esac

# Shall we build the docs?
AC_ARG_WITH(docs,
    [  --with-docs             Build the docs (requires sgmltools) ],
    [with_docs=$withval],
    [with_docs=no]
)

DOCS_TARGET=""
if test "$with_docs" = "yes"
then
   	echo Looking for sgmltools
	AC_PATH_PROG(SGMLTOOLS, sgmltools, FAIL)
	if test "$SGMLTOOLS" = "FAIL"; then
		AC_MSG_RESULT( ******************************************************************* )
		AC_MSG_RESULT( *** Cannot find sgmltools to build docs. skipping building docs *** )
		AC_MSG_RESULT( *** Visit http://sgmltools-lite.sourceforge.net and install it. *** )
		AC_MSG_RESULT( ******************************************************************* )
	else
		DOCS_TARGET="simple"

	fi
fi

AC_SUBST(DOCS_TARGET)

# Compile with profiling, to find bottlenecks
AC_ARG_WITH(profiling,
  [  --with-profiling        Compile with profiling support],
  [# Does it work for other compilers then GCC? [pere 2000-12-30]
   if test "${ac_cv_prog_gcc}" = "yes"; then
      CFLAGS="${CFLAGS} -pg -a"
      LDFLAGS="${LDFLAGS} -pg -a"

      # Make sure 'config.h' is changed if profiling is turned on, to
      # trigger recompile for every source file.
      AC_DEFINE(PROFILING, 1, [Profiling enabled?])
   else
      echo "Do not know how to perform profiling using this compiler!"
   fi
  ]
)

echo Looking for libraries
echo Looking for ncurses
AC_CHECK_LIB(ncurses, tparm)
if test "$ac_cv_lib_ncurses_tparm" = "yes"; then
  echo Using ncurses
else
  echo Looking for curses
  AC_CHECK_LIB(curses, main)
  if test "$ac_cv_lib_curses_main" = "yes"; then
    echo Using curses
  else
    echo "Didn't find an up-to-date ncurses or curses library!"
    echo "Link problems may result!"
  fi
fi

dnl AC_CHECK_LIB(gdbm, gdbm_open)
dnl AC_CHECK_LIB(nsl, inet_ntoa)
dnl AC_CHECK_LIB(socket, getpeername)
dnl AC_CHECK_LIB(resolv, gethostname)
dnl AC_CHECK_LIB(iberty, bzero)
dnl AC_CHECK_LIB(gen, syslog)
dnl AC_CHECK_LIB(bsd, revoke)
dnl AC_CHECK_LIB(ucb, bzero)

echo Looking for header files
AC_CHECK_HEADERS( getopt.h alloc.h malloc.h dirent.h pwd.h locale.h )
dnl AC_HEADER_STDC
dnl AC_CHECK_HEADERS( errno.h dirent.h fcntl.h getopt.h libgen.h libintl.h pwd.h siginfo.h signal.h statbuf.h stdio.h stdlib.h string.h strings.h sys/stat.h sys/time.h sys/types.h unistd.h )

dnl echo Looking for typedefs, structures, and compiler characteristics.
dnl AC_C_CONST
dnl AC_HEADER_TIME

echo Looking for library functions
AC_CHECK_FUNCS( _vsnprintf heapwalk _heapwalk strcmpi strcasecmp \
	getpwuid setlocale )

dnl Check for replacement functions
AC_REPLACE_FUNCS( sleep scandir alphasort getopt snprintf vsnprintf \
	_llnull langinfo)

dnl AC_CHECK_FUNCS(strerror perror strsignal psignal getopt getopt_long random)
dnl investigate using AC_MSG_ERROR for error reporting
dnl echo Looking for OPTIONAL library functions
dnl AC_REPLACE_FUNCS(dirname)

dnl echo Examining library functions
dnl AC_TYPE_SIGNAL

dnl we only use this if we do not have strsignal
dnl AC_DECL_SYS_SIGLIST

AC_OUTPUT(Makefile  m4/Makefile \
        arch/Makefile \
        btree/Makefile \
        interp/Makefile \
        gedlib/Makefile \
        stdlib/Makefile \
        liflines/Makefile \
        tools/Makefile \
        hdrs/Makefile \
        hdrs/win32/Makefile \
        docs/Makefile \
        reports/Makefile
        win32/Makefile \
        win32/msvc6/Makefile \
        intl/Makefile po/Makefile.in)

