# This makefile is for the lifelines reports

AUTOMAKE_OPTIONS = no-dependencies
### pkgdir := $(pkgdatadir)/reports
pkg_REPORTS = \
	2ppage.ll 4gen1.ll 6gen1.ll 8gen1.ll \
	ahnentafel.ll alive.ll alllines.ll alllines.sgml.ll	\
	ancestors2.ll bias.ll bkdes16-1.ll cid.ll connect2.ll	\
	count_anc.ll count_desc.ll count_paternal_desc.ll cousins.ll	\
	coverage.ll dates.ll desc-henry.ll fam10c.ll fam16rn1.ll	\
	familyisfm1.ll famrep1.ll famrep3.ll famrep6.ll famtree1.ll	\
	fdesc.ll find.ll findmissing.ll fix_nameplac.ll	\
	formatted_gedcom.ll genancc1.ll gender_order.ll genetics.ll	\
	givens_gender_finder.ll hasnotes1.ll igi-merge.ll index1.ll	\
	index_mm.ll indiv2.r.ll indiv3.ll infant_mortality.ll	\
	least_related.ll longlines.ll marriages1.ll menu.ll	\
	namefreq.ll namefreq2.ll names_freq.ll namesformat1.ll	\
	nonpatronymics.ll pafcompat.ll partition.ll pdesc1.ll	\
	pdesc2.r.ll pdesc3.ll pdesc4.ll pedigreel.ll places.ll	\
	ps-anc2.ll ps-anc5.ll ps-anc6.ll ps-anc7.ll ps-anc8.ll	\
	register-tex.ll register1.ll regvital.ll regvital1.ll	\
	relate.ll related_spouses.ll relation.ll rllgen.ll rslgen.ll	\
	select.li showlines1.ll simpleged.ll soundex-isfm.ll	\
	soundex1.ll sources.ll stats.ll surname1.ll timeline1.ll	\
	timeline2.ll tinytafel1.ll tinytafel2.ll verify.ll

EXTRA_DIST = \
	$(pkg_REPORTS) \
	CREDIT README
